--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:server": "npx json-server server.json -p 3333 -w -d 500",
     "build": "tsc && vite build",
     "lint": "eslint src --ext .tsx,.ts",
-    "lint:fix":"eslint src --ext .tsx,.ts --fix",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "scheduler": "^0.23.2",
     "styled-components": "^6.1.9",
+    "use-context-selector": "^1.4.4",
     "zod": "^3.23.6"
   },
   "devDependencies": {
